cmake_minimum_required(VERSION 3.1.0)

project(glib_collections LANGUAGES C)

find_package(PkgConfig REQUIRED)

pkg_check_modules(GLIB2 REQUIRED glib-2.0)

include_directories(${GLIB2_INCLUDE_DIRS})

link_directories(${GLIB2_LIBRARY_DIRS})
link_libraries(${GLIB2_LIBRARIES})

add_executable(ex-compile ex-compile.c)
add_executable(ex-garray-1 ex-garray-1.c)
add_executable(ex-garray-2 ex-garray-2.c)
add_executable(ex-garray-3 ex-garray-3.c)
add_executable(ex-garray-4 ex-garray-4.c)
add_executable(ex-garray-5 ex-garray-5.c)
add_executable(ex-garray-6 ex-garray-6.c)
add_executable(ex-garray-7 ex-garray-7.c)
add_executable(ex-garray-8 ex-garray-8.c)
add_executable(ex-ghashtable-1 ex-ghashtable-1.c)
add_executable(ex-ghashtable-2 ex-ghashtable-2.c)
add_executable(ex-ghashtable-3 ex-ghashtable-3.c)
add_executable(ex-ghashtable-4 ex-ghashtable-4.c)
add_executable(ex-ghashtable-5 ex-ghashtable-5.c)
add_executable(ex-ghashtable-6 ex-ghashtable-6.c)
add_executable(ex-ghashtable-7 ex-ghashtable-7.c)
add_executable(ex-glist-1 ex-glist-1.c)
add_executable(ex-glist-2 ex-glist-2.c)
add_executable(ex-glist-3 ex-glist-3.c)
add_executable(ex-glist-4 ex-glist-4.c)
add_executable(ex-gqueue-1 ex-gqueue-1.c)
add_executable(ex-gqueue-2 ex-gqueue-2.c)
add_executable(ex-gqueue-3 ex-gqueue-3.c)
add_executable(ex-gqueue-4 ex-gqueue-4.c)
add_executable(ex-gqueue-5 ex-gqueue-5.c)
add_executable(ex-gqueue-6 ex-gqueue-6.c)
add_executable(ex-gslist-01 ex-gslist-01.c)
add_executable(ex-gslist-02 ex-gslist-02.c)
add_executable(ex-gslist-03 ex-gslist-03.c)
add_executable(ex-gslist-04 ex-gslist-04.c)
add_executable(ex-gslist-05 ex-gslist-05.c)
add_executable(ex-gslist-06 ex-gslist-06.c)
add_executable(ex-gslist-07 ex-gslist-07.c)
add_executable(ex-gslist-08 ex-gslist-08.c)
add_executable(ex-gslist-09 ex-gslist-09.c)
add_executable(ex-gslist-10 ex-gslist-10.c)
add_executable(ex-gslist-11 ex-gslist-11.c)
add_executable(ex-gtree-1 ex-gtree-1.c)
add_executable(ex-gtree-2 ex-gtree-2.c)
add_executable(ex-gtree-3 ex-gtree-3.c)
add_executable(ex-gtree-4 ex-gtree-4.c)
add_executable(ex-gtree-5 ex-gtree-5.c)
add_executable(ex-gtree-6 ex-gtree-6.c)
