cmake_minimum_required(VERSION 3.27)

project(glib_collections LANGUAGES C)

# Glib2
find_package(PkgConfig REQUIRED)
pkg_check_modules(GLIB2 REQUIRED glib-2.0)
include_directories(${GLIB2_INCLUDE_DIRS})
link_directories(${GLIB2_LIBRARY_DIRS})
link_libraries(${GLIB2_LIBRARIES})

add_executable(ex-compile      src/ex-compile.c)
add_executable(ex-garray-1     src/ex-garray-1.c)
add_executable(ex-garray-2     src/ex-garray-2.c)
add_executable(ex-garray-3     src/ex-garray-3.c)
add_executable(ex-garray-4     src/ex-garray-4.c)
add_executable(ex-garray-5     src/ex-garray-5.c)
add_executable(ex-garray-6     src/ex-garray-6.c)
add_executable(ex-garray-7     src/ex-garray-7.c)
add_executable(ex-garray-8     src/ex-garray-8.c)
add_executable(ex-ghashtable-1 src/ex-ghashtable-1.c)
add_executable(ex-ghashtable-2 src/ex-ghashtable-2.c)
add_executable(ex-ghashtable-3 src/ex-ghashtable-3.c)
add_executable(ex-ghashtable-4 src/ex-ghashtable-4.c)
add_executable(ex-ghashtable-5 src/ex-ghashtable-5.c)
add_executable(ex-ghashtable-6 src/ex-ghashtable-6.c)
add_executable(ex-ghashtable-7 src/ex-ghashtable-7.c)
add_executable(ex-glist-1      src/ex-glist-1.c)
add_executable(ex-glist-2      src/ex-glist-2.c)
add_executable(ex-glist-3      src/ex-glist-3.c)
add_executable(ex-glist-4      src/ex-glist-4.c)
add_executable(ex-gqueue-1     src/ex-gqueue-1.c)
add_executable(ex-gqueue-2     src/ex-gqueue-2.c)
add_executable(ex-gqueue-3     src/ex-gqueue-3.c)
add_executable(ex-gqueue-4     src/ex-gqueue-4.c)
add_executable(ex-gqueue-5     src/ex-gqueue-5.c)
add_executable(ex-gqueue-6     src/ex-gqueue-6.c)
add_executable(ex-gslist-01    src/ex-gslist-01.c)
add_executable(ex-gslist-02    src/ex-gslist-02.c)
add_executable(ex-gslist-03    src/ex-gslist-03.c)
add_executable(ex-gslist-04    src/ex-gslist-04.c)
add_executable(ex-gslist-05    src/ex-gslist-05.c)
add_executable(ex-gslist-06    src/ex-gslist-06.c)
add_executable(ex-gslist-07    src/ex-gslist-07.c)
add_executable(ex-gslist-08    src/ex-gslist-08.c)
add_executable(ex-gslist-09    src/ex-gslist-09.c)
add_executable(ex-gslist-10    src/ex-gslist-10.c)
add_executable(ex-gslist-11    src/ex-gslist-11.c)
add_executable(ex-gtree-1      src/ex-gtree-1.c)
add_executable(ex-gtree-2      src/ex-gtree-2.c)
add_executable(ex-gtree-3      src/ex-gtree-3.c)
add_executable(ex-gtree-4      src/ex-gtree-4.c)
add_executable(ex-gtree-5      src/ex-gtree-5.c)
add_executable(ex-gtree-6      src/ex-gtree-6.c)
